--- a/src/Components/Counter/Counter.module.sass
+++ b/src/Components/Counter/Counter.module.sass
@@ -9,7 +9,7 @@
   justify-content: space-evenly
   padding: 10px
 
-header 
+header
   margin-bottom: 50px
   font-size: 30px
   text-transform: uppercase
@@ -61,8 +61,9 @@ main
       padding: 5px 10px
       border-radius: 5px
       border: none
-      width: 100px
+      width: 150px
     span
-      width: 100px
-
-
+      width: 150px
+      text-transform: uppercase
+      padding-right: 15px
+      text-align: center
