--- a/src/Components/Counter/Button/Button.module.sass
+++ b/src/Components/Counter/Button/Button.module.sass
@@ -1,12 +1,13 @@
 .button
   border: none
   outline: none
-  background-color: #4cbddc
+  background-color: #5cb0ff
   padding: 15px
   border-radius: 5px
   border: 1px solid #3792ac
   cursor: pointer
   font-size: 25px
   min-width: 150px
+  transition: .3s background-color
   &:hover
     background-color: #34d3ff
